# cognitive-services-speech-sdk-rs

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  changelog.md
.github/workflows/: github-actions-rust-ci.yml  pr.yml
SpeechSDK/: .gitignore  README.md
SpeechSDK/include/c_api/: speechapi_c_common.h  speechapi_c_connection.h  speechapi_c_dialog_service_connector.h  (+2 more)
c_api/: wrapper.h
examples/: README.md
examples/dialog/: from_push_audio_stream.rs  helpers.rs  keyword_recognition_async.rs  listen_once_async.rs  main.rs  start_keyword_recognition_async.rs
examples/recognizer/: continuous_recognition_from_file.rs  continuous_recognition_pull_stream.rs  continuous_recognition_push_stream.rs  continuous_recognition_push_stream_once.rs  embedded_continuous_recognition_from_file.rs  embedded_recognize_once_async_from_file.rs  from_microphone.rs  helpers.rs  main.rs  recognize_once.rs  recognize_once_async_from_file.rs  recognize_once_async_from_push_stream.rs
examples/synthesizer/: audio_data_stream.rs  helpers.rs  input_text_streaming.rs  main.rs  speak_ssml_async.rs  speak_ssml_async_bm_viseme.rs  speak_text_async.rs  speak_text_async_2.rs
res/: wrapper.h
res/microsoft-speech-rs-master/: .gitignore  Cargo.toml  LICENSE.txt  build.rs
res/microsoft-speech-rs-master/c_api/: wrapper.h
res/microsoft-speech-rs-master/examples/: asr.rs
res/microsoft-speech-rs-master/src/: async_handle.rs  config.rs  lib.rs  property.rs  speech_api.rs  synthesizer.rs
res/microsoft-speech-rs-master/src/audio/: mod.rs  stream.rs  stream_format.rs
res/microsoft-speech-rs-master/src/recognizer/: events.rs  mod.rs  speech.rs
src/: audio.rs  common.rs  config.rs  dialog.rs  error.rs  events.rs  ffi.rs  lib.rs  main.rs  property.rs  recognizer.rs  speech.rs
src/audio/: audio_config.rs  audio_input_stream.rs  audio_output_stream.rs  audio_stream_container_format.rs  audio_stream_format.rs  config.rs  input_stream.rs  pull_audio_input_stream.rs  pull_audio_output_stream.rs  push_audio_input_stream.rs  push_audio_output_stream.rs  stream_format.rs
src/common/: cancellation_error_code.rs  cancellation_reason.rs  output_format.rs  profanity_option.rs  property_collection.rs  property_id.rs  result_reason.rs  service_property_channel.rs  speech_synthesis_boundary_type.rs  speech_synthesis_output_format.rs  stream_status.rs  synthesis_voice_type.rs
src/dialog/: activity_received_event.rs  bot_framework_config.rs  custom_commands_config.rs  dialog_service_config.rs  dialog_service_connector.rs
src/ffi/: bindings.rs
src/speech/: audio_data_stream.rs  auto_detect_source_language_config.rs  cancellation_details.rs  embedded_speech_config.rs  grammar_phrase.rs  keyword_recognition_model.rs  phrase_list_grammar.rs  recognition_event.rs  session_event.rs  source_language_config.rs  speech_config.rs  speech_recognition_canceled_event.rs  speech_recognition_event.rs  speech_recognition_result.rs  speech_recognizer.rs  speech_synthesis_bookmark_event.rs  speech_synthesis_event.rs  speech_synthesis_request.rs  speech_synthesis_result.rs  speech_synthesis_viseme_event.rs  speech_synthesis_word_boundary_event.rs  speech_synthesizer.rs  synthesis_voices_result.rs  voice_info.rs
tests/: common.rs  integration_test.rs  pull_input_segfault_test.rs  push_output_segfault_test.rs  recognizer_segfault_test.rs  synthesizer_segfault_test.rs
(+61 files in other folders)
