[package]
name = "cognitive-services-speech-sdk-rs"
version = "1.0.0"
authors = ["Adam Bezecny <adam.bezecny@gmail.com>"]
edition = "2018"
description = "Rust bindings for Microsoft Speech SDK."
license = "MIT OR Apache-2.0"
keywords = ["speech", "microsoft", "cognitive", "recognition", "synthesizing"]
categories = ["multimedia", "multimedia::audio", "text-processing"]
exclude = [
    "examples/*"
]
repository = "https://github.com/jabber-tools/cognitive-services-speech-sdk-rs/"
documentation = "https://jabber-tools.github.io/cognitive_services_speech_sdk_rs/doc/1.0.0/cognitive_services_speech_sdk_rs/index.html"

[dependencies]
log = "0.4"
env_logger = "0.11.3"
tokio = { version = "1.37.0", features = ["full"] }

[build-dependencies]
bindgen = "0.69.4"
flate2 = "1.0.28"
tar = "0.4.40"
ureq = "2.9.6"
zip = { version = "1.1.1", default-features = false, features = ["deflate", "deflate64"] }
